# job-matching

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
api/: jobmatch.http
jobmatch/: __init__.py  advert.py  api.py  cache.py  claimant.py  datasets.py  embeddings.py  job.py  job_datasets.py  llm.py  model_jobbert.py  model_skill_extraction.py  models.py  sentence_transformers.py  skills.py  soc.py
jobmatch/data/: claimant.csv  onet_skills.csv
jobmatch/experiments/: advert_to_soc.py  job_bert.py  report.py  skills_extraction.py  title_to_soc.py
jobmatch/scripts/: claimant.py  claimant_lookup.json  claimant_lookup.py  soc_extraction.py  soc_title_id.json
