[project]
name = "jobmatch"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "gensim (>=4.3.3,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "datasets (>=3.4.1,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "transformers (>=4.50.0,<5.0.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "kagglehub (>=0.3.10,<0.4.0)",
    "accelerate (>=1.5.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
